--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -20,10 +20,11 @@
             <% if (page.social.gplus) { %><span> • </span><a href="<%- page.social.gplus %>" target="_blank">G+</a><% } %>
         </span>
         <% } %>
+        Email для связи: <%- page.email %>
     </span>
 
     <div style="float:right;  text-align: right; width:300px; padding-top: 3px;">
-        © 2017 CinemaPress ACMS
+        &copy;&nbsp;2017&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
     </div>
 
     <script type="text/javascript" src="/themes/drogo/public/js/all.js"></script>
