--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -38,6 +38,12 @@
                         Кадры
                     </div>
 
+                    <% if (typeof page.adv == 'object' && page.adv.top) { %>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.top %>
+                    </div>
+                    <% } %>
+
                     <div class="fullstory">
 
                         <div class="shortstorytitle">
@@ -102,6 +108,12 @@
 
                 <div style="clear: both"></div>
 
+                <% if (typeof page.adv == 'object' && page.adv.over) { %>
+                <div style="text-align: center; margin: 10px auto">
+                    <%- page.adv.over %>
+                </div>
+                <% } %>
+
                 <div class="section">
 
                     <div class="tabs">
@@ -118,6 +130,12 @@
                     </div>
 
                 </div>
+
+                <% if (typeof page.adv == 'object' && page.adv.under) { %>
+                <div style="text-align: center; margin: 10px auto">
+                    <%- page.adv.under %>
+                </div>
+                <% } %>
 
                 <% if (page.seo) { %>
 
@@ -170,6 +188,12 @@
                 <% if (page.comments) { %>
                 <div style="padding: 10px;">
                     <%- page.comments %>
+                </div>
+                <% } %>
+
+                <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                <div style="text-align: center; margin: 10px auto">
+                    <%- page.adv.bottom %>
                 </div>
                 <% } %>
 
