--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,12 @@
 
                 <div id="cinemapress-content">
 
+                    <% if (typeof page.adv == 'object' && page.adv.top) { %>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.top %>
+                    </div>
+                    <% } %>
+
                     <div style="margin: 10px auto; text-align: center">
                         <h1><%- page.title %></h1>
                     </div>
@@ -108,6 +114,12 @@
                     <% } } } %>
 
                     <div style="clear:both"></div>
+
+                    <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.bottom %>
+                    </div>
+                    <% } %>
 
                     <% if (page.seo) { %>
 
