--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -22,7 +22,7 @@
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/мультфильм">Мультфильмы</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/мюзикл">Мюзиклы</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.country %>/Россия">Отечественные</a><br>
-                    <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/приклюения">Приключения</a><br>
+                    <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/приключения">Приключения</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/семейный">Семейные</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/спорт">Cпортивные</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.genre %>/триллер">Триллеры</a><br>
