--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -209,6 +209,12 @@
                 </div>
                 <% } %>
 
+                <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                <div style="text-align: center; margin: 10px auto">
+                    <%- page.adv.bottom %>
+                </div>
+                <% } %>
+
             </div>
 
             <% include includes/left.ejs %>
