--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -40,6 +40,7 @@
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.year %>/2014">2014 года</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.year %>/2015">2015 года</a><br>
                     <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.year %>/2016">2016 года</a><br>
+                    <a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.year %>/2017">2017 года</a><br>
                     <div class="poloska"></div>
                 </div>
                 <div class="mini">
