--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,6 +115,26 @@
 
                     <div style="clear:both"></div>
 
+                    <div class="bot-left">
+                        <div class="bot-navigation" align="center">
+                            <% if (page.pagination.prev.length) { %>
+                            <% page.pagination.prev.slice(-6).forEach(function (prev) { %>
+                            <a href="<%- prev.link %>" rel="nofollow"><%- prev.number %></a>
+                            <% }); %>
+                            <span class="nav_ext">...</span>
+                            <% } %>
+                            <span><%- page.pagination.current %></span>
+                            <% if (page.pagination.next.length) { %>
+                            <span class="nav_ext">...</span>
+                            <% page.pagination.next.slice(0,6).forEach(function (next) { %>
+                            <a href="<%- next.link %>" rel="nofollow"><%- next.number %></a>
+                            <% }); %>
+                            <% } %>
+                        </div>
+                    </div>
+
+                    <div style="clear:both"></div>
+
                     <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.bottom %>
