CinemaPress ACMS GA

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru-RU">
+<html lang="ru">
 <head>
 
     <% include includes/head.ejs %>
@@ -14,23 +14,20 @@
     <% include includes/header.ejs %>
 
     <div class="contener">
-
         <div class="contener2">
-
             <div class="content">
-
                 <div id="cinemapress-content">
 
                     <div style="padding: 9px 10px 8px 20px; border-bottom: 1px solid #848480;">
 						<span>
-							<a href="<%- page.protocol %><%- page.domain %>">
+							<a href="/">
 								Главная
 							</a>
 						</span> »
                         <%- page.title %>
                     </div>
 
-                    <% if (typeof page.adv == 'object' && page.adv.top) { %>
+                    <% if (typeof page.adv === 'object' && page.adv.top) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.top %>
                     </div>
@@ -40,43 +37,43 @@
                         <h1><%- page.title %></h1>
                     </div>
 
-                    <% if (typeof categories == 'object' && categories.length) { %>
-
-                    <% categories.forEach(function (category) { %>
-
-                    <a href="<%- category.url %>" target="_blank" style="float: left; margin: 11px; text-decoration: none; width: 190px; overflow: hidden; white-space: nowrap;">
-                        <img src="<% if (category.image) { %><%- category.image %><% } %>" style="width: 190px; height: 100px; border-radius: 10px;" title="<%- category.name %>" alt="<%- category.name %>">
-                        <div><%- category.name %></div>
-                    </a>
-
+                    <% if (typeof categories === 'object' && categories.length) { %>
+                    <div style="clear: both"></div>
+                    <% categories.forEach(function (content) { %>
+                    <div style="float: left; width: 50%;">
+                        <div style="margin: 0; padding: 10px">
+                            <a href="<%- content.url %>" class="cinemapress-news">
+                                <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+                                <div class="cinemapress-news-title">
+                                    <%- content.title %>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <% }); %>
-
+                    <div style="clear: both"></div>
                     <% } %>
 
                     <div style="clear:both"></div>
 
-                    <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                    <% if (typeof page.adv === 'object' && page.adv.bottom) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.bottom %>
                     </div>
                     <% } %>
 
                     <% if (page.seo) { %>
-
                     <div style="margin: 20px 10px;">
                         <%- page.seo %>
                     </div>
-
                     <% } %>
 
                 </div>
-
             </div>
 
             <% include includes/left.ejs %>
 
         </div>
-
     </div>
 
     <% include includes/footer.ejs %>
