--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru-RU">
+<html lang="ru">
 <head>
 
     <% include includes/head.ejs %>
@@ -14,14 +14,11 @@
     <% include includes/header.ejs %>
 
     <div class="contener">
-
         <div class="contener2">
-
             <div class="content">
-
                 <div id="cinemapress-content">
 
-                    <% if (typeof page.adv == 'object' && page.adv.top) { %>
+                    <% if (typeof page.adv === 'object' && page.adv.top) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.top %>
                     </div>
@@ -31,34 +28,47 @@
                         <h1><%- page.title %></h1>
                     </div>
 
-                    <% if (typeof movies == 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
-
-                    <% if (movies[type].length) { %>
-
-                    <% movies[type].forEach(function (category) { %>
+                    <% if (typeof index === 'object') {
+                        for (var type in index) {
+                            if (index.hasOwnProperty(type) && index[type].length) {
+                                index[type].forEach(function (category) { %>
 
                     <h2 style="padding: 7px 20px;position: relative;border-bottom: 1px solid #3f413f;"><%- category.name %></h2>
 
-                    <% if (category.movies.length) { %>
-
-                    <% category.movies.forEach(function (movie) { %>
-
+                    <% if (category.movies.length) {
+                        category.movies.forEach(function (movie) { %>
                     <div class="shortstory">
-
                         <div class="shortstorytitle">
                             <h2 class="zagolovki">
-                                <a href="<%- movie.url %>"><%- movie.title %> (<% if (movie.season && movie.episode) { %><%- movie.season %> сезон <%- movie.episode %> серия <% if (movie.translate) { %><%- movie.translate %><% } %><% } else { %><%- movie.year %><% } %>)</a>
+                                <a href="<%- movie.url %>"><%- movie.title %> (<% if (movie.season && movie.episode) { %><%- movie.season %> сезон <%- movie.episode %> серия<% } else { %><%- movie.year %><% } %>)</a>
                             </h2>
                         </div>
-
                         <div class="shortimg">
                             <div style="display:inline;">
-                                <a href="<%- movie.url %>">
-                                    <img src="<%- movie.poster %>" style="float:left; width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                <% if (movie.poster) { %>
+                                <a href="<%- movie.url %>" style="float: left;">
+                                    <div class="cinemapress-poster">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                        <% if (movie.quality) { %>
+                                        <div class="cinemapress-quality">
+                                            <span class="cinemapress-svg-quality"></span>
+                                            <%- movie.quality %>
+                                        </div>
+                                        <% } %>
+                                        <% if (movie.translate) { %>
+                                        <div class="cinemapress-translate">
+                                            <span class="cinemapress-svg-translate"></span>
+                                            <%- movie.translate %>
+                                        </div>
+                                        <% } %>
+                                    </div>
                                 </a>
+                                <% } %>
+                                <% if (movie.description_short) { %>
                                 <div style="text-align: justify;">
                                     <%- movie.description_short %>...
                                 </div>
+                                <% } %>
                                 <br><br>
                                 <% if (movie.kp_rating) { %>
                                 <b>КиноПоиск:</b> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> голосов)<br>
@@ -80,6 +90,7 @@
                                 <% if (movie.directors_url) { %>
                                 <b>Режиссер:</b> <%- movie.directors_url %><br>
                                 <% } %>
+                                <br>
                                 <% if (movie.actors_url) { %>
                                 <b>Актеры:</b> <%- movie.actors_url %><br>
                                 <% } %>
@@ -94,31 +105,30 @@
                         <span class="podrobnee" style="padding: 4px 0 4px 20px;">
                             <a href="<%- movie.url %>">
                                 <span class="fbutton-img">
-                                    <img src="/themes/drogo/public/img/viewmore.png" alt="смотреть <%- movie.title %> (<%- movie.year %>) онлайн" border="0">
+                                    <img src="/themes/drogo/public/img/viewmore.png" alt="смотреть <%- movie.title %> (<%- movie.year %>) онлайн" style="border: 0">
                                 </span>
                             </a>
                         </span>
+                        <% if (movie.premiere) { %>
                         <span style="float:right; padding: 7px 20px 19px 20px;">
                             <span class="dateicon" title="Дата"><%- movie.premiere %></span>
                         </span>
+                        <% } %>
                     </div>
 
-                    <% }); %>
-
-                    <% } %>
-
-                    <% }); %>
-
-                    <% } %>
-
-                    <% } } } %>
+                    <% }); } }); } } } %>
 
                     <div style="clear:both"></div>
 
+                    <% if (typeof page.pagination === 'object') { %>
                     <div class="bot-left">
-                        <div class="bot-navigation" align="center">
+                        <div class="bot-navigation" style="text-align: center">
+                            <% if (page.pagination.first) { %>
+                            <a href="<%- page.pagination.first.link %>" rel="nofollow"><%- page.pagination.first.number %></a>
+                            <span class="nav_ext">...</span>
+                            <% } %>
                             <% if (page.pagination.prev.length) { %>
-                            <% page.pagination.prev.slice(-6).forEach(function (prev) { %>
+                            <% page.pagination.prev.forEach(function (prev) { %>
                             <a href="<%- prev.link %>" rel="nofollow"><%- prev.number %></a>
                             <% }); %>
                             <span class="nav_ext">...</span>
@@ -126,31 +136,30 @@
                             <span><%- page.pagination.current %></span>
                             <% if (page.pagination.next.length) { %>
                             <span class="nav_ext">...</span>
-                            <% page.pagination.next.slice(0,6).forEach(function (next) { %>
+                            <% page.pagination.next.forEach(function (next) { %>
                             <a href="<%- next.link %>" rel="nofollow"><%- next.number %></a>
                             <% }); %>
                             <% } %>
-                            <% if (page.pagination.all) { %>
+                            <% if (page.pagination.last) { %>
                             <span class="nav_ext">...</span>
-                            <a href="<%- page.pagination.all.link %>" rel="nofollow"><%- page.pagination.all.number %></a>
+                            <a href="<%- page.pagination.last.link %>" rel="nofollow"><%- page.pagination.last.number %></a>
                             <% } %>
                         </div>
                     </div>
+                    <% } %>
 
                     <div style="clear:both"></div>
 
-                    <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                    <% if (typeof page.adv === 'object' && page.adv.bottom) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.bottom %>
                     </div>
                     <% } %>
 
                     <% if (page.seo) { %>
-
                     <div style="margin: 20px 10px;">
                         <%- page.seo %>
                     </div>
-
                     <% } %>
 
                 </div>
@@ -162,7 +171,6 @@
             <% include includes/left.ejs %>
 
         </div>
-
     </div>
 
     <% include includes/footer.ejs %>
