--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="ru-RU">
+<html lang="ru" prefix="og: http://ogp.me/ns#
+              video: http://ogp.me/ns/video#
+              ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
     <% include includes/head.ejs %>
@@ -23,7 +25,7 @@
 
                     <div style="padding: 9px 10px 8px 20px; border-bottom: 1px solid #848480;">
 						<span>
-							<a href="<%- page.protocol %><%- page.domain %>">
+							<a href="/">
 								Главная
 							</a>
 						</span> »
@@ -38,7 +40,7 @@
                         Серия онлайн
                     </div>
 
-                    <% if (typeof page.adv == 'object' && page.adv.top) { %>
+                    <% if (typeof page.adv === 'object' && page.adv.top) { %>
                     <div style="text-align: center; margin: 10px auto">
                         <%- page.adv.top %>
                     </div>
@@ -52,13 +54,33 @@
                             </h1>
                         </div>
 
-                        <div class="fullimg">
-
+                        <div class="fullimg" style="margin-right: 30px">
                             <div style="display:inline;">
-
-                                <a href="<%- movie.url %>">
-                                    <img src="<%- movie.poster %>" style="float:left; width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                <% if (movie.poster) { %>
+                                <a href="<%- movie.url %>" style="float: left">
+                                    <div class="cinemapress-poster">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                        <% if (movie.quality) { %>
+                                        <div class="cinemapress-quality">
+                                            <span class="cinemapress-svg-quality"></span>
+                                            <%- movie.quality %>
+                                        </div>
+                                        <% } %>
+                                        <% if (movie.translate) { %>
+                                        <div class="cinemapress-translate">
+                                            <span class="cinemapress-svg-translate"></span>
+                                            <%- movie.translate %>
+                                        </div>
+                                        <% } %>
+                                    </div>
                                 </a>
+                                <% } %>
+                                <% if (page.seo) { %>
+                                <div style="text-align: justify;">
+                                    <%- page.seo %>
+                                </div>
+                                <% } %>
+                                <br>
                                 <% if (movie.kp_rating) { %>
                                 <b>КиноПоиск:</b> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> голосов)<br>
                                 <% } %>
@@ -82,7 +104,6 @@
                                 <% if (movie.actors_url) { %>
                                 <b>Актеры:</b> <%- movie.actors_url %><br>
                                 <% } %>
-
                             </div>
 
                             <div style="clear: both"></div>
@@ -122,7 +143,7 @@
 
                 <div style="clear: both"></div>
 
-                <% if (typeof page.adv == 'object' && page.adv.over) { %>
+                <% if (typeof page.adv === 'object' && page.adv.over) { %>
                 <div style="text-align: center; margin: 10px auto">
                     <%- page.adv.over %>
                 </div>
@@ -149,21 +170,30 @@
 
                 </div>
 
-                <% if (typeof page.adv == 'object' && page.adv.under) { %>
+                <% if (typeof page.adv === 'object' && page.adv.under) { %>
                 <div style="text-align: center; margin: 10px auto">
                     <%- page.adv.under %>
                 </div>
                 <% } %>
 
-                <% if (page.seo) { %>
-
-                <div style="margin: 20px 10px;">
-                    <%- page.seo %>
+                <% if (typeof contents === 'object' && contents.length) { %>
+                <div style="clear: both"></div>
+                <% contents.forEach(function (content) { %>
+                <div style="float: left; width: 50%;">
+                    <div style="margin: 0; padding: 10px">
+                        <a href="<%- content.url %>" class="cinemapress-news">
+                            <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+                            <div class="cinemapress-news-title">
+                                <%- content.title %>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-
+                <% }); %>
+                <div style="clear: both"></div>
                 <% } %>
 
-                <% if (typeof movies == 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
+                <% if (typeof movies === 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
 
                 <% if (movies[type].length) { %>
 
@@ -182,7 +212,7 @@
                         <li>
 
                             <a href="<%- movie.url %>" title="<%- movie.title %> (<%- movie.year %>)">
-                                <img src="<%- movie.poster %>" style="height:165px; width:110px">
+                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%- movie.title %>">
                                 <%- movie.title %> (<%- movie.year %>)
                             </a>
 
@@ -209,7 +239,7 @@
                 </div>
                 <% } %>
 
-                <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+                <% if (typeof page.adv === 'object' && page.adv.bottom) { %>
                 <div style="text-align: center; margin: 10px auto">
                     <%- page.adv.bottom %>
                 </div>
