--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,12 +1,10 @@
 <div class="footer">
 
     <div class="footer-text">
-
         <div class="recentlyViewedBlock" style="display: none;">
             <div>Вы надавно смотрели:</div>
             <div id="recentlyViewed"></div>
         </div>
-
     </div>
 
     <div style="clear: both; float: none"></div>
@@ -18,13 +16,15 @@
             <% if (page.social.facebook) { %><span> • </span><a href="<%- page.social.facebook %>" target="_blank">facebook</a><% } %>
             <% if (page.social.twitter) { %><span> • </span><a href="<%- page.social.twitter %>" target="_blank">twitter</a><% } %>
             <% if (page.social.gplus) { %><span> • </span><a href="<%- page.social.gplus %>" target="_blank">G+</a><% } %>
+            <% if (page.social.youtube) { %><span> • </span><a href="<%- page.social.youtube %>" target="_blank">YouTube</a><% } %>
+            <% if (page.social.instagram) { %><span> • </span><a href="<%- page.social.instagram %>" target="_blank">Instagram</a><% } %>
         </span>
         <% } %>
         Email для связи: <%- page.email %>
     </span>
 
     <div style="float:right;  text-align: right; width:300px; padding-top: 3px;">
-        &copy;&nbsp;2017&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
+        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
     </div>
 
     <script type="text/javascript" src="/themes/drogo/public/js/all.js"></script>
