--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -118,7 +118,7 @@
                             <div class="screens">
                                 <% movie.pictures.forEach(function (picture) { %>
                                 <a href="<%- movie.url %>/<%- page.urls.movies.picture %>">
-                                    <img src="<%- picture.picture_min %>" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)" style="width: 190px; height: 100px">
+                                    <img src="<%- picture.picture_min %>" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
                                 </a>
                                 <% }); %>
                             </div>
