--- a/views/download.ejs
+++ b/views/download.ejs
@@ -185,43 +185,24 @@
                 <div style="clear: both"></div>
                 <% } %>
 
-                <% if (typeof movies === 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
-
-                <% if (movies[type].length) { %>
-
-                <% movies[type].forEach(function (category) { %>
-
+                <% if (typeof movies === 'object') {
+                        for (var type in movies) {
+                if (movies.hasOwnProperty(type) && movies[type].length) {
+                movies[type].forEach(function (category) { %>
                 <div class="relatednews_title">
                     <i><span class="selection_index"></span><%- category.name %></i>
                 </div>
                 <div class="relatednews">
-                    <ul class="ul_related">
-
-                        <% if (category.movies.length) { %>
-
-                        <% category.movies.forEach(function (movie) { %>
-
-                        <li>
-
+                    <ul class="ul_related"><% if (category.movies.length) {
+                        category.movies.forEach(function (movie) { %><li>
                             <a href="<%- movie.url %>" title="<%- movie.title %> (<%- movie.year %>)">
                                 <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%- movie.title %>">
                                 <%- movie.title %> (<%- movie.year %>)
                             </a>
-
-                        </li>
-
-                        <% }); %>
-
-                        <% } %>
-
+                        </li><% }); } %>
                     </ul>
                 </div>
-
-                <% }); %>
-
-                <% } %>
-
-                <% } } } %>
+                <% }); } } } %>
 
                 <div style="clear:both;"></div>
 
